--- a/docker-compose-external.yml
+++ b/docker-compose-external.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   core:
     image: jumpserver/jms_core:${Version}
@@ -81,3 +81,4 @@ volumes:
 
 networks:
   jumpserver:
+    name: jumpserver-net
